--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     	<h3> Enter your Message </h3>
     	<textarea name="message" rows="6" cols="50" required="required"></textarea>
         <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
-        <button type="submit" class="btn btn-primary btn-block btn-large" value="b2" formaction="{{ url_for('test')}}">See</button>
+        <button type="submit" class="btn btn-primary btn-block btn-large" value="b2" formaction="{{ url_for('clean')}}">See</button>
     </form>
 
    <br>
