--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <form action="{{ url_for('predict')}}" method="post">
     	<h3> Enter your Message </h3>
     	<textarea name="message" rows="6" cols="50" required="required"></textarea>
-        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+        <button type="submit" class="btn btn-primary btn-block btn-large" value="predict">Predict</button>
         <button type="submit" class="btn btn-primary btn-block btn-large" formaction="{{ url_for('clean')}}">See</button>
     </form>
 
