--- a/templates/index.html
+++ b/templates/index.html
@@ -16,12 +16,11 @@
  <div class="login">
 	<h1>Spam Classifier</h1>
 
-     <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}" method="post">
+    <form action="{{ url_for('predict') }}" method=["post"]>
     	<h3> Enter your Message </h3>
     	<textarea name="message" rows="6" cols="50" required="required"></textarea>
         <button type="submit" class="btn btn-primary btn-block btn-large" value="predict">Predict</button>
-        <button type="submit" class="btn btn-primary btn-block btn-large" formaction="{{ url_for('clean')}}">See</button>
+        <button type="submit" class="btn btn-primary btn-block btn-large" formaction="{{ url_for('clean') }}">See</button>
     </form>
 
    <br>
