--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
  <div class="login">
 	<h1>Spam Classifier</h1>
 
-    <form action="{{ url_for('predict') }}" method=["post"]>
+    <form action="{{ url_for('predict') }}" method="post">
     	<h3> Enter your Message </h3>
     	<textarea name="message" rows="6" cols="50" required="required"></textarea>
         <button type="submit" class="btn btn-primary btn-block btn-large" value="predict">Predict</button>
