--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
- <div class="login">
+ <div class="spam-container">
 	<h1>Spam Classifier</h1>
 
     <form action="{{ url_for('predict') }}" method="post">
