--- a/templates/result.html
+++ b/templates/result.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+<!--From https://codepen.io/frytyler/pen/EGdtg-->
+<head>
+  <meta charset="UTF-8">
+  <title>ML API</title>
+    <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-
 	<header>
 		<div class="container">
 		<div id="brandname">
-			ML App
+
 		</div>
-		<h2>Spam Detector For SMS Messages</h2>
+		<br>
+		<h1>Spam Classifier</h1>
 		
 	</div>
 	</header>
-	<p style="color:blue;font-size:20;text-align: center;"><b>Results for Comment</b></p>
+
 	<div class="results">
+	    
+	    <p style="color:grey;font-size:20;text-align: center;"> {{ actual_text }} </p>
+     <br>
+     <br>
+        {{ cleaned_text }}
+    
+    	{% if prediction_text == 1%}
+    	<h2 style="color:red;">Spam</h2>
+    	{% elif prediction_text == 0%}
+    	<h2 style="color:blue;">Not a Spam (It is a Ham)</h2>
+    	{% endif %}
 
-
-		
-	{% if prediction == 1%}
-	<h2 style="color:red;">Spam</h2>
-	{% elif prediction == 0%}
-	<h2 style="color:blue;">Not a Spam (It is a Ham)</h2>
-	{% endif %}
-
-	</div>
+        <form>
+          <input type="button" value="Want to search again, go back!" onclick="history.go(-1)">
+    </div>
 
 </body>
 </html>
